# DMuffler

./: .gitignore  .ruff.toml  .taskmasterconfig  BluetoothConnector.py  DMufflerDatabase.db  DMufflerLocal.db  DMufflerLocalDev.db  Database.py  DevNotes.txt  EngineSoundGenerator.py  EngineSoundPitchShifter.py  GlobalConstants.py  Main.py  OpenBOM_Template_Catalog.csv  OpenBOM_Template_Catalog.numbers  OpenBOM_Template_Catalog.xlsx  README.md  TestDMuffler.db  dmuffler_pi.py  logging_utils.py  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  set_model.py  test_bluetooth_connector.py  test_database.py  test_engine_sound_pitch_shifter.py  test_global_constants.py  test_image_manifest.py  test_logging_utils.py  test_main.py  test_results.txt
.github/workflows/: codeql-analysis.yml  dependabot-auto-merge.yml  python-app.yml
.zed/: settings.json
scripts/: README.md  __init__.py  approve_dependabot_prs.py  requirements-test.txt  test_dependabot_approver.py
static/images/: image_manifest.py
