[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DMuffler"
version = "0.1.0"
description = "DMuffler project with windsurf-project standards"
requires-python = ">=3.8"

[project.scripts]
dmuffler = "DMuffler.main:main"

[project.dependencies]
bluepy = "^1.3.0"
peek-python = "^0.0.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.10"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--cov=DMuffler --cov-report=term --cov-report=xml"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
all = true
select = ["E", "F", "I", "B", "C", "Q", "UP"]
ignore = ["E501"]
line-length = 100

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = ["DMuffler"]

[tool.ruff.flake8]
ignore = ["E501"]

[tool.ruff.format]
line-length = 100
