[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["scripts"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project]
name = "dependabot-auto-approver"
version = "0.1.0"
description = "Automatically approve and merge Dependabot pull requests"
requires-python = ">=3.8"
dependencies = [
    "PyGithub>=2.4.0"
]

[project.scripts]
dependabot-approver = "scripts.approve_dependabot_prs:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.10"
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--cov=scripts --cov-report=term --cov-report=xml"
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
# Basic configuration
select = ["E", "F"]  # pycodestyle and pyflakes
ignore = ["E501"]    # Ignore line length for now
fix = true

# Line length
line-length = 88

# Known first party modules
[tool.ruff.isort]
known-first-party = ["scripts"]
